src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Amendments_Approved_Completed_Date__c</fullName>
        <label>Amendments Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendments_Draft_Sent_Date__c</fullName>
        <label>Amendments Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendments_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendments - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendments_Status__c</fullName>
        <label>Amendments Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date_Details__c</fullName>
        <label>Approval Date Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Capture_Kick_Off_Meeting_Date__c</fullName>
        <label>Contract Capture Kick Off Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Capture_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Capture Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Capture_Meeting_Frequency__c</fullName>
        <label>Contract Capture Meeting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Twice a Week</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Contact_Address__c</fullName>
        <label>Contract Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Email__c</fullName>
        <formula>CustomerSigned.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Number__c</fullName>
        <formula>CustomerSigned.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Details__c</fullName>
        <label>Contract Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Location__c</fullName>
        <label>Contract Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - On Hold</fullName>
                </value>
                <value>
                    <fullName>2 - Draft in Progress at ZT</fullName>
                    <default>true</default>
                    <label>2 - Draft in Progress at ZT</label>
                </value>
                <value>
                    <fullName>3 - Internal Review</fullName>
                </value>
                <value>
                    <fullName>4 - TT Review</fullName>
                </value>
                <value>
                    <fullName>5 - At AE/Customer for Signature</fullName>
                </value>
                <value>
                    <fullName>6 - At TT for Signature</fullName>
                </value>
                <value>
                    <fullName>7 - Executed</fullName>
                </value>
                <value>
                    <fullName>8 - Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signatories__c</fullName>
        <label>Contract Signatories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Contract</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Conversion__c</fullName>
        <label>Data Conversion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Council_Approval_Date__c</fullName>
        <label>Final Council/Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GIS__c</fullName>
        <label>GIS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Contract_Capture_Kick_Off_Date__c</fullName>
        <label>Internal Contract Capture Kick Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Contract_Documents_Location__c</fullName>
        <label>Internal Contract Documents Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Key_Drivers__c</fullName>
        <label>Key Drivers</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Approved_Completed_Date__c</fullName>
        <label>Maintenance Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Draft_Sent_Date__c</fullName>
        <label>Maintenance Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Status__c</fullName>
        <label>Maintenance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Interface_Blurbs__c</fullName>
        <label>New Interface Blurbs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Hard_Copies_Required__c</fullName>
        <label>Number of Hard Copies Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Activity</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Bond_Required__c</fullName>
        <label>Performance Bond Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Must Provide</fullName>
                </value>
                <value>
                    <fullName>Might Require</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Section_Approved_Completed_Date__c</fullName>
        <label>Pricing Section Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Section_Draft_Sent_Date__c</fullName>
        <label>Pricing Section Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Section_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Section - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Section_Status__c</fullName>
        <label>Pricing Section Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Approved_Completed_Date__c</fullName>
        <label>Project Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Draft_Sent_Date__c</fullName>
        <label>Project Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Approved_Completed_Date__c</fullName>
        <label>Project Plan Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Draft_Sent_Date__c</fullName>
        <label>Project Plan Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Plan - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Status__c</fullName>
        <label>Project Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOW_Approved_Completed_Date__c</fullName>
        <label>SOW Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Draft_Sent_Date__c</fullName>
        <label>SOW Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Status__c</fullName>
        <label>SOW Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Date__c</fullName>
        <formula>Opportunity__r.Selection_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Assurance_Review_Meeting_Date__c</fullName>
        <label>Solution Assurance Review Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solutions_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solutions Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Approved_Completed_Date__c</fullName>
        <label>Subscription Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Draft_Sent_Date__c</fullName>
        <label>Subscription Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Approved_Completed_Date__c</fullName>
        <label>3rd Party Approved/Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Draft_Sent_Date__c</fullName>
        <label>3rd Party Draft Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party - Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Status__c</fullName>
        <label>3rd Party Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>TriTech Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Final Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Contract_Details__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Contract_Details__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Contract_Details__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Working_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Contract_Location__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Contract_Details__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Data_Conversion__c</columns>
        <columns>GIS__c</columns>
        <columns>Third_Party__c</columns>
        <columns>New_Interface_Blurbs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Location__c</field>
            <operation>notEqual</operation>
            <value>7 - Executed,8 - Canceled</value>
        </filters>
        <label>Working Contracts</label>
        <sharedTo>
            <group>Zuercher_Support</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>TriTech_Contract_Capture</fullName>
        <active>true</active>
        <label>TriTech Contract Capture</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zuercher_Contract</fullName>
        <active>true</active>
        <label>Zuercher Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>